# effects-benchmarks

./: effects-benchmarks.cabal  hie.yaml  package.yaml
instances/ExtEff/: Bench.hs  HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Freer/: Bench.hs  HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Fused/: Bench.hs  HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/MTL/: Bench.hs  HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Poly/: Bench.hs  HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Shallow/: Bench.hs  HTTP.hs  Stateful.hs  StatefulExcept.hs
src/: Main.hs
