cabal-version:       2.2
name:                effects-benchmarks
version:             0.1.0.0
homepage:            https://github.com/patrickt/effects-benchmarks#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -flate-specialise
  build-depends:       base >= 4.7 && < 5

library instances-for-shallow
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: Shallow.HTTP
                 , Shallow.Stateful
                 , Shallow.StatefulExcept

library instances-for-exteff
  import: shared
  hs-source-dirs:  instances
  exposed-modules: ExtEff.Stateful
                 , ExtEff.StatefulExcept
                 , ExtEff.HTTP
  build-depends:   extensible-effects

library instances-for-mtl
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: MTL.Stateful
                 , MTL.StatefulExcept
                 , MTL.HTTP
  build-depends:   mtl

library instances-for-fused-effects
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: Fused.Stateful
                 , Fused.StatefulExcept
                 , Fused.HTTP
  build-depends:   fused-effects > 1 && <1.1

library instances-for-freer-simple
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: Freer.Stateful
                 , Freer.StatefulExcept
                 , Freer.HTTP
  build-depends:   freer-simple

library instances-for-polysemy
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: Poly.Stateful
                 , Poly.StatefulExcept
                 , Poly.HTTP
  build-depends:   polysemy

benchmark effects-benchmarks
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: src
  build-depends:  instances-for-mtl
                , instances-for-fused-effects
                , instances-for-freer-simple
                , instances-for-polysemy
                , instances-for-shallow
                , instances-for-exteff
                , gauge
                , weigh
                , polysemy
  main-is:        Main.hs
